# videoxt

./: .gitignore  README.md  keyframes.txt  pyproject.toml  requirements.txt  run_gui.py  version.txt
.github/.workflows/: build.yml
.github/workflows/: build.yml
docs/: key_frames.md  rqt_图片序列去重.md
src/SeqPurge/: __init__.py  main.py
src/SeqPurge/core/: __init__.py  deduplicator.py  file_utils.py  image_utils.py
src/SeqPurge/gui/: __init__.py  main_window.py  widgets.py
src/SeqPurge/utils/: __init__.py  config.py  logger.py
src/videoxt/: __init__.py  cli.py  controllers.py  ffmpeg.py  gui.py  gui_launcher.py  models.py  scheduler.py
