[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videoxt"
version = "0.1.0"
description = "高效并行的视频关键帧提取与音视频对齐工具"
authors = [{name = "mrguangtu", email = "mrguangtu@163.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ffmpeg-python>=1.0",
    "tqdm>=4.0",
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "mypy>=1.0",
    "isort>=5.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3 